# simpleVCPKGExample

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
tests/: test_example.cpp
